--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+  name="viewport"
+  content="minimum-scale=1, initial-scale=1, width=device-width"
+/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,6 +27,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+
     <title>React App</title>
   </head>
   <body>
